--- a/General Exercises/OOP Exercises/index.html
+++ b/General Exercises/OOP Exercises/index.html
@@ -6,39 +6,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Modelo</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./First Exercise/css/style.css">
 </head>
 
 <body>
+<div class="container">
+    <h1>Compra de Passagem Aérea</h1>
 
-  <section class="container">
-    <h1>Formulário de cadastro</h1>
-    <ul>
-      <li>Nenhum campo pode estar vazio</li>
-      <li>Usuário só poderá conter letras e/ou números</li>
-      <li>Usuário deverá ter entre 3 e 12 caracteres</li>
-      <li>Senha precisa ter entre 6 e 12 caracteres</li>
-    </ul>
-    
-    <form action="/" method="POST" class='formulario'>
-      <label>Nome</label>
-      <input type="text" class="nome validar">
-      <label>Sobrenome</label>
-      <input type="text" class="sobrenome validar">
-      <label>CPF</label>
-      <input type="text" class="cpf validar">
-      <label>Usuário</label>
-      <input type="text" class="usuario validar">
-      <label>Senha</label>
-      <input type="password" class="senha validar">
-      <label>Repetir Senha</label>
-      <input type="password" class="repetir-senha validar">
-      <button type="submit">Enviar</button>
+    <form id="form-passagem">
+      <!-- ORIGEM -->
+      <label for="origemCidade">Cidade de Origem</label>
+      <input type="text" id="origemCidade" required>
+
+      <label for="origemPais">País de Origem</label>
+      <input type="text" id="origemPais" required>
+
+      <!-- DESTINO -->
+      <label for="destinoCidade">Cidade de Destino</label>
+      <input type="text" id="destinoCidade" required>
+
+      <label for="destinoPais">País de Destino</label>
+      <input type="text" id="destinoPais" required>
+
+      <!-- DATAS -->
+      <label for="dataIda">Data de Ida</label>
+      <input type="date" id="dataIda" required>
+
+      <label for="dataVolta">Data de Volta</label>
+      <input type="date" id="dataVolta" required>
+
+      <!-- PASSAGEIRO -->
+      <label for="nome">Nome Completo</label>
+      <input type="text" id="nome" required>
+
+      <label for="cpf">CPF</label>
+      <input type="text" id="cpf" required>
+
+      <!-- PAGAMENTO -->
+      <label for="pagamento">Forma de Pagamento</label>
+      <select id="pagamento" required>
+        <option value="">Selecione</option>
+        <option value="Cartão de Crédito">Cartão de Crédito</option>
+        <option value="Boleto Bancário">Boleto Bancário</option>
+      </select>
+
+      <button type="submit">Comprar Passagem</button>
     </form>
-  </section>
 
-  <script src="./assets/js/validaCPF.js"></script>
-  <script src="./assets/js/main.js"></script>
+    <div id="resumo"></div>
+  </div>
+
+  <!-- SCRIPTS (classes e lógica devem ser implementados em main.js por exemplo) -->
+  <script src="./First Exercise/js/exercise-project-pass.js"></script>
 </body>
 
 </html>
